입력시스템 완성

--- a/framework.html
+++ b/framework.html
@@ -3,6 +3,7 @@
 <head><meta charset="utf-8"/>
     <title>HTML5 Game Framework</title>
     <script src="FrameCounter.js"></script>
+    <script src="InputSystem.js"></script>
     <script src="GameFramework.js"></script>
 </head>
 <body>
